--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vue": "^2.6.8"
+    "vue": "^2.6.8",
+    "echarts": "^4.1.0",
+    "vue-echarts": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.4.10",
@@ -21,7 +23,6 @@
     "clean-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
-    "echarts": "^4.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
@@ -29,7 +30,6 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "vue-echarts": "^4.0.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8",
     "webpack": "^4.29.6",
